# img1tool

./: .gitignore  Makefile.am  configure.ac  libimg1tool.pc.in  libimg2tool.pc.in  makeShellcodeHeader.py
.github/workflows/: main.yml
img1tool/: Makefile.am  crc32.h  img1tool.cpp  main.cpp
img1tool.xcodeproj/: project.pbxproj
img2tool/: Makefile.am  crc32.c  crc32.h  img2tool.cpp  main.cpp
img2tool.xcodeproj/: project.pbxproj
include/: Makefile.am
include/img1tool/: img1tool.hpp
include/img2tool/: img2tool.hpp
